--- a/src/Chat.css
+++ b/src/Chat.css
@@ -64,7 +64,7 @@
     background-repeat: repeat;
     background-position: center;
     padding: 30px;
-    /* overflow: scroll; */
+    overflow: scroll;
 }
 
 .chat__footer{
@@ -95,4 +95,17 @@
 .chat__footer > .MuiSvgIcon-root {
     padding: 10px;
     color: gray;
+}
+
+html {
+    overflow: scroll;
+    overflow-x: hidden;
+}
+::-webkit-scrollbar {
+    width: 0;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
+}
+/* Optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+    background: #FF0000;
 }
